--- a/package.json
+++ b/package.json
@@ -65,9 +65,11 @@
   "license": "MIT",
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "cclog": "^0.4.1",
     "co-request": "^1.0.0",
     "debug": "^2.2.0",
     "eslint": "^2.2.0",
+    "github-api": "^2.3.0",
     "history": "^2.0.0",
     "iconv-lite": "^0.4.13",
     "isomorphic-fetch": "^2.2.1",
@@ -75,7 +77,10 @@
     "koa-bodyparser": "^3.0.0",
     "koa-connect-history-api-fallback": "^0.3.0",
     "koa-convert": "^1.2.0",
+    "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
+    "leveldown": "^1.5.0",
+    "levelup": "^1.3.3",
     "material-ui": "^0.14.4",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
@@ -88,6 +93,7 @@
     "redux": "^3.0.0",
     "redux-actions": "^0.9.1",
     "redux-thunk": "^1.0.0",
+    "simple-oauth2": "^1.0.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
